<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="slidenerd.vivz.bucketdrops.home.ActivityMain">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="101"
        android:title="@string/action_add"
        app:showAsAction="always" />

        <item
        android:id="@+id/action_sort_ascending_date"
            android:icon="@drawable/ic_arrow_upward_white_24dp"
        android:orderInCategory="102"
        android:title="@string/action_sort_ascending_date"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort_descending_date"
        android:orderInCategory="103"
        android:icon="@drawable/ic_arrow_downward_white_24dp"
        android:title="@string/action_sort_descending_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_linear"
        android:orderInCategory="103"
        android:icon="@drawable/ic_arrow_downward_white_24dp"
        android:title="Linear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_grid"
        android:orderInCategory="103"
        android:icon="@drawable/ic_arrow_downward_white_24dp"
        android:title="Grid"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="104"
        android:title="Settings"
        app:showAsAction="never" />

</menu>
