<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark"
            android:fillViewport="true"
            android:padding="@dimen/dlg_add_padding"
            android:scrollbarStyle="outsideOverlay">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/tv_title_vertical_margin"
        android:layout_marginTop="@dimen/tv_title_vertical_margin"
        android:layout_weight="1"
        android:fontFamily="@string/sans_serif_light"
        android:text="@string/str_ok_drop"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tv_title_font_size"/>

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="@dimen/btn_close_size"
        android:layout_height="@dimen/btn_close_size"
        android:layout_alignBottom="@+id/tv_title"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_title"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close"/>


    <EditText
        android:id="@+id/et_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginBottom="@dimen/et_drop_vertical_margin"
        android:layout_marginTop="@dimen/et_drop_vertical_margin"
        android:background="@drawable/bg_et_drop"
        android:fontFamily="@string/sans_serif_light"
        android:imeOptions="actionDone"
        android:padding="@dimen/et_drop_padding"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white">

        <requestFocus/>
    </EditText>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_add_it"
        android:fontFamily="@string/sans_serif_light"
        android:padding="@dimen/btn_add_it_padding"
        android:text="@string/str_mark_completed"
        android:textAllCaps="false"
        android:textColor="@color/btn_add_color"
        android:textSize="@dimen/btn_add_it_font_size"
        android:layout_below="@+id/et_edit"
        android:layout_alignRight="@+id/btn_close"
        android:layout_alignEnd="@+id/btn_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_below="@+id/btn_ok"
        android:layout_toLeftOf="@+id/btn_close"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#e31a1a" />
</RelativeLayout>
</ScrollView>


